# devscripts

./: README.md
.github/: SIZE.md  SIZE.txt
.github/workflows/: build_alpine_base_mimalloc.yaml  build_alpine_rust.yaml  build_bootstrap_images_aarch64.yaml  build_bootstrap_images_x86_64.yaml  build_default.yaml  build_default_alpine.yaml  build_default_debian.yaml  build_default_ubuntu.yaml  build_gh_builder_images.yaml  build_gh_runner_images.yaml  fetch_runner_images.yaml  healthchecks_housekeeping.yaml
Github/Runners/: README.md  aarch64-ubuntu.dockerfile  alpine-builder.dockerfile  alpine-ix.dockerfile  alpine-rust.dockerfile  alpine-slim.dockerfile  alpine.dockerfile  alpine_loongarch64.dockerfile  archlinux-builder.dockerfile  debian-builder-unstable.dockerfile  debian-guix.dockerfile  debian-ix.dockerfile  debian.dockerfile  debian_loongarch64.dockerfile  debloat_ubuntu.sh  docker-bake.hcl  gentoo-builder.dockerfile  manage_linux.sh  riscv64-ubuntu.dockerfile  run_linux.sh  ubuntu-builder.dockerfile  ubuntu-systemd-base.dockerfile  ubuntu.dockerfile  x86_64-ubuntu.dockerfile
Github/Runners/bootstrap/: alpine.sh  archlinux.sh  archlinux_hooks.sh  artix.sh  cachyos.sh  deb_bootstrap.sh  deb_bootstrap_loongarch64.sh  debian.sh  debian_guix.sh  eweos.sh  ubuntu.sh
Linux/: .bashrc  DAGU_CRON.md  extraxtor.go  extraxtor.sh  file.sh  gentoo.conf  guix.channels.keyless.scm  install_bins_curl.sh  install_golang.sh  install_ix.sh  install_nix.sh  install_node_x86_64.sh  install_zig.sh  nonguix.channels.scm  rbuilder.sh  setup_ssh.sh
Linux/extraxtor/: README.md  extraxtor.go
Linux/obfsx/: Cargo.toml
Linux/obfsx/src/: main.rs
Linux/rename/: Cargo.toml
Linux/rename/src/: main.rs
Linux/tss/: Cargo.toml  README.md
Linux/tss/src/: Cargo.toml  main.rs
Misc/: remove_upx_info.sh
Misc/Cloud/: change_hostname_colab.sh  reboot_instance_aws.sh  reboot_instance_cntb.sh  setup_apptainer_colab.sh  setup_idx.nix
Misc/User-Agents/: ua_chrome_android_all.txt  ua_chrome_android_latest.txt  ua_chrome_macos_all.txt  ua_chrome_macos_latest.txt  ua_chrome_windows_all.txt  ua_chrome_windows_latest.txt  ua_firefox_macos_all.txt  ua_firefox_macos_latest.txt  ua_firefox_windows_all.txt  ua_firefox_windows_latest.txt  ua_safari_iphone_all.txt  ua_safari_iphone_latest.txt  ua_safari_macos_all.txt  ua_safari_macos_latest.txt  user_agents_all.txt
