[package]
name = "rrename"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Azathothas@pkgforge.dev", "QaidVoid@pkgforge.dev"]
description = "Rename Files using Regex"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
glob = "0.3"
atty = "0.2"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
panic = "abort"
strip = true