[package]
name = "rrename"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Azathothas@pkgforge.dev", "QaidVoid@pkgforge.dev"]
description = "Rename Files using Regex"

[dependencies]
anyhow = "1.0"
atty = "0.2"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
glob = "0.3"
num_cpus = "1.0"
regex = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
panic = "abort"
strip = true